iptables-host-basic.rules
# Generated by iptables-save v1.4.14 on Sun Feb 16 18:44:57 2014
*nat
:PREROUTING ACCEPT [10:1028]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 10.0.2.0/24 -o bond0 -j MASQUERADE
COMMIT
# Completed on Sun Feb 16 18:44:57 2014
# Generated by iptables-save v1.4.14 on Sun Feb 16 18:44:57 2014
*mangle
:PREROUTING ACCEPT [188319:53449772]
:INPUT ACCEPT [187139:53394636]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [174718:65232051]
:POSTROUTING ACCEPT [174718:65232051]
COMMIT
# Completed on Sun Feb 16 18:44:57 2014
# Generated by iptables-save v1.4.14 on Sun Feb 16 18:44:57 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [215:55330]
:IN_SSH - [0:0]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j IN_SSH
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A IN_SSH -m recent --rcheck --seconds 10 --hitcount 3 --rttl --name sshbf --rsource -j DROP
-A IN_SSH -m recent --rcheck --seconds 1800 --hitcount 4 --rttl --name sshbf --rsource -j DROP
-A IN_SSH -m recent --set --name sshbf --rsource -j ACCEPT
-A fw-interfaces -i venet0 -j ACCEPT
COMMIT
# Completed on Sun Feb 16 18:44:57 2014
